Fix logo stretch on mobile #13

--- a/frontend/public/src/components/common/header/Header.css
+++ b/frontend/public/src/components/common/header/Header.css
@@ -55,7 +55,7 @@ header li:not(.selected):hover {
     header li.selected {
         background-color: #3d3d3d;
     }
-    header .logoContainer{
+    header .logoContainer img {
         content: url('../../../assets/logodark.png');
     }
     header li.selected:hover {
